フォーマット２

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,15 +1,12 @@
+$grey-color: #808080; // 必要な色を設定
+
 @import "minima";
 
 body {
   background-color: #121212;
-  /* Dark theme background */
   color: #e0e0e0;
-  /* Light text color for dark background */
 }
 
 a {
   color: #bb86fc;
-  /* Custom link color */
 }
-
-/* Additional styling */
