--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,3 +1,9 @@
+// 変数を定義
+$grey-color: #808080;
+
+@import "minima"; // minimaのSCSSをインポート
+@import "minima/_variables"; // 変数が含まれているファイルをインポート
+
 body {
   background-color: #121212;
   color: #e0e0e0;
